# CG_Labs

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .travis.yml  0001-Fix-CMake-import.patch  0001-Fix-GLM-version.patch  0001-fix-compiling-problems-under-vs2017-3.patch  0002-Always-set-IMPORTED_CONFIGURATIONS.patch  0003-Fix-dynamic-loading-path-for-OSX.patch  0004-Turn-multi-configuration-off.patch  BUILD.rst  Bonobo_8cpp.html  Bonobo_8h.html  Bonobo_8h_source.html  BuildSettings_8h.html  BuildSettings_8h_source.html  CHANGES.rst  CMakeLists.txt  CMakeSettings.json  CelestialBody_8cpp.html  CelestialBody_8hpp.html  CelestialBody_8hpp_source.html  Dear_ImGui_CMakeLists.txt  Dear_ImGui_imguiConfig.cmake  Doxyfile.in  EDAF80_2CMakeLists_8txt.html  EDAF80_2assignment2_8cpp.html  EDAF80_2assignment2_8hpp.html  EDAF80_2assignment2_8hpp_source.html  EDAN35_2CMakeLists_8txt.html  EDAN35_2assignment2_8cpp.html  EDAN35_2assignment2_8hpp.html  EDAN35_2assignment2_8hpp_source.html  FPSCamera_8h.html  FPSCamera_8h_source.html  FPSCamera_8inl.html  FPSCamera_8inl_source.html  InputHandler_8cpp.html  InputHandler_8h.html  (+179 more)
.github/workflows/: doc.yml  macos.yml  ubuntu.yml  windows.yml
CMake/: InstallAssimp.cmake  InstallGLFW.cmake  InstallGLM.cmake  InstallImGui.cmake  InstallSTB.cmake  InstallTinyFileDialogs.cmake  RetrieveResourceArchive.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+113 more)
shaders/: fallback.frag  fallback.vert
shaders/EDA221/: diffuse.frag  diffuse.vert  fullscreen.frag  tangent.vert  texcoord.vert
shaders/EDA221_Assignment1/: default.frag  default.vert
shaders/EDAF80/: binormal.frag  binormal.vert  celestial_ring.frag  default.frag  default.vert  diffuse.frag  diffuse.vert  fallback.vert  normal.frag  normal.vert  phong.frag  phong.vert  skybox.frag  skybox.vert  tangent.frag  tangent.vert  texcoord.frag  texcoord.vert  water.frag  water.vert
shaders/EDAN35/: accumulate_lights.frag  accumulate_lights.vert  fill_gbuffer.frag  fill_gbuffer.vert  fill_shadowmap.frag  fill_shadowmap.vert  render_light_cones.frag  render_light_cones.vert  resolve_deferred.frag  resolve_deferred.vert
shaders/common/: basis.frag  basis.vert  fallback.vert  fullscreen.frag  fullscreen.vert
src/: doc.h
src/EDA221/: CMakeLists.txt  assignment1.cpp  assignment1.hpp  assignment2.cpp  assignment2.hpp  assignment3.cpp  assignment3.hpp  assignment4.cpp  assignment5.cpp  helpers.cpp  helpers.hpp  interpolation.cpp  interpolation.hpp  node.cpp  node.hpp  parametric_shapes.cpp  parametric_shapes.hpp
src/EDA221_Assignment1/: CMakeLists.txt  SolarSystem.cpp  SolarSystem.h  main.cpp
src/EDAF80/: CMakeLists.txt  CelestialBody.cpp  CelestialBody.hpp  assignment1.cpp  assignment1.hpp  assignment2.cpp  assignment2.hpp  assignment3.cpp  assignment3.hpp  assignment4.cpp  assignment4.hpp  assignment5.cpp  assignment5.hpp  helpers.hpp  interpolation.cpp  parametric_shapes.cpp  parametric_shapes.hpp
src/EDAN35/: CMakeLists.txt  assignment2.cpp  assignment2.hpp
src/core/: Bonobo.cpp  Bonobo.h  BuildSettings.h  CMakeLists.txt  FPSCamera.h  FPSCamera.inl  GLStateInspection.cpp  GLStateInspection.h  GLStateInspectionView.cpp  GLStateInspectionView.h  InputHandler.cpp  InputHandler.h  Log.cpp  Log.h  LogView.cpp  LogView.h  Misc.cpp  Misc.h  ShaderProgramManager.cpp  ShaderProgramManager.hpp  TRSTransform.h  TRSTransform.inl  Types.cpp  Types.h  Types.inl  Window.cpp  Window.h  WindowManager.cpp  WindowManager.hpp  config.hpp.in  helpers.cpp  helpers.hpp  node.cpp  node.hpp  opengl.cpp  opengl.hpp  stb_impl.c  utils.h  various.cpp  various.hpp
